--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,11 @@
+* {
+  box-sizing: border-box;
+}
+
 .content {
-  padding-top: 3em;
+  padding-top: 6em;
+  margin: auto;
+  width: 90%;
 }
 
 .main {
